<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".auth.SignUp">

    <TextView
        android:id="@+id/textview_Titel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/titel"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_Subtitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/subtitel"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_Titel" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_Subtitel">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/inner_Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edittext_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:met_baseColor="@color/baseColor"
                app:met_errorColor="@color/errorColor"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Name"
                app:met_iconLeft="@drawable/round_person_black_24"
                app:met_iconPadding="0dp"
                app:met_primaryColor="@color/primaryColor" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edittext_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_Name"
                app:met_baseColor="@color/baseColor"
                app:met_errorColor="@color/errorColor"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Email"
                app:met_iconLeft="@drawable/round_email_white_24"
                app:met_iconPadding="0dp"
                app:met_primaryColor="@color/primaryColor" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edittext_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_Email"
                app:met_baseColor="@color/baseColor"
                app:met_errorColor="@color/errorColor"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Password"
                app:met_iconLeft="@drawable/round_lock_white_24"
                app:met_iconPadding="0dp"
                app:met_maxCharacters="18"
                app:met_minCharacters="6"
                app:met_primaryColor="@color/primaryColor" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edittext_Confirm_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_Password"
                app:met_baseColor="@color/baseColor"
                app:met_errorColor="@color/errorColor"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Password"
                app:met_iconLeft="@drawable/round_lock_white_24"
                app:met_iconPadding="0dp"
                app:met_maxCharacters="18"
                app:met_minCharacters="6"
                app:met_primaryColor="@color/primaryColor" />

            <CheckBox
                android:id="@+id/cb_Terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="209dp"
                android:buttonTint="@color/baseColor"
                android:text="@string/cb_Terms"
                android:textColor="@color/baseColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_Confirm_Password" />

            <Button
                android:id="@+id/btn_Signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/bg"
                android:text="@string/signup"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_Terms" />

            <TextView
                android:id="@+id/textview_Noaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/terms"
                android:textColor="@color/baseColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_Signup" />

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>